--- a/footer.html
+++ b/footer.html
@@ -129,122 +129,166 @@
             <p>We love collaborating with non-profits - Get in touch to join forces with us!</p>
             <div class="logo-grid">
 
+                  <a href="https://www.dot.legal/" target="_blank"><img loading="lazy"
+                              src="images/collabs/Dot.-logo.jpg" alt="Dot"></a>
                   <a href="https://legaldesign-journal.com/" target="_blank"><img
                               src="images/collabs/Legal Design Journal.JPG" alt="Legal Design Journal"></a>
-                  <a href="https://www.hiil.org/" target="_blank"><img
+                  <a href="https://www.hiil.org/" target="_blank"><img loading="lazy"
                               src="images/collabs/HiiL_Logo color tagline.png"></a>
-                  <a href="https://legalhackers.org/" target="_blank"><img src="images/collabs/lh.png"></a>
-                  <a href="https://elta.org/" target="_blank"><img src="images/collabs/elta.png"></a>
+                  <a href="https://legalhackers.org/" target="_blank"><img loading="lazy"
+                              src="images/collabs/lh.png"></a>
+                  <a href="https://elta.org/" target="_blank"><img loading="lazy" src="images/collabs/elta.png"></a>
                   <a href="https://www.tum.de/" target="_blank"><img
                               src="images/collabs/TUM_Logo_extern_mt_EN_RGB_neg_p(Christian Djeffal).png"></a>
-                  <a href="https://www.iltanet.org/home" target=" _blank"><img
+                  <a href="https://www.iltanet.org/home" target=" _blank"><img loading="lazy"
                               src="images/collabs/ILTA-logo-full.svg"></a>
-                  <a href="https://www.copenhagenlegaltech.dk/" target="_blank"><img src="images/collabs/clt.png"></a>
-                  <a href="https://juristiliitto.fi/" target="_blank"><img src="images/collabs/Juristiliitto.png"></a>
-                  <a href="https://chancerylaneproject.org/" target="_blank"><img src="images/collabs/TCLP.png"></a>
-                  <a href="https://www.vttresearch.com/en" target=" _blank"><img
+                  <a href="https://www.copenhagenlegaltech.dk/" target="_blank"><img loading="lazy"
+                              src="images/collabs/clt.png"></a>
+                  <a href="https://www.copenhagenlegaltech.dk/" target="_blank"><img
+                              src="images/collabs/Copenhagen Legal Tech.png"></a>
+                  <a href="https://juristiliitto.fi/" target="_blank"><img loading="lazy"
+                              src="images/collabs/Juristiliitto.png"></a>
+                  <a href="https://chancerylaneproject.org/" target="_blank"><img loading="lazy"
+                              src="images/collabs/TCLP.png"></a>
+                  <a href="https://www.vttresearch.com/en" target=" _blank"><img loading="lazy"
                               src="images/collabs/VTT_Orange_Logo.png"></a>
                   <a href="https://www.helsinki.fi/en/networks/legal-tech-lab" target=" _blank"><img
                               src="images/collabs/helsinki-legal-tech-lab.png"></a>
-                  <a href="https://projects.tuni.fi/jargonfree/" target=" _blank"><img
+                  <a href="https://projects.tuni.fi/jargonfree/" target=" _blank"><img loading="lazy"
                               src="images/collabs/JARGONFREE_logo.jpg"></a>
-                  <a href="https://legalshake.com/" target=" _blank"><img src="images/collabs/Legal_Shake.png"></a>
-                  <a href="https://legaldesignsummit.com" target=" _blank"><img
+                  <a href="https://legalshake.com/" target=" _blank"><img loading="lazy"
+                              src="images/collabs/Legal_Shake.png"></a>
+                  <a href="https://legaldesignsummit.com" target=" _blank"><img loading="lazy"
                               src="images/collabs/NJLDL-Logo-v1.png"></a>
                   <a href="https://oikeusministerio.fi/en/frontpage" target=" _blank"><img
                               src="images/collabs/OM_eng_RGB.png"></a>
-
+                  <a href="https://www.uwasa.fi/en" target=" _blank"><img loading="lazy"
+                              src="images/collabs/University-of-Vaasa-Logo-EN-Small-Vertical-Greytxt.jpg"></a>
+                  <a href="https://www.univ-antananarivo.mg/" target=" _blank"><img loading="lazy"
+                              src="images/collabs/Logo FDSP - Université d'Antananarivo (1).png"></a>
 
                   <a href="https://law.vanderbilt.edu/academics/academic-programs/law-and-innovation/activities.php"
-                        target="_blank"><img src="images/collabs/vanderbilt.png"></a>
-                  <a href="https://www.nulawlab.org/" target="_blank"><img src="images/collabs/nu-law.png"></a>
+                        target="_blank"><img loading="lazy" src="images/collabs/vanderbilt.png"></a>
+                  <a href="https://www.newcastle.edu.au/" target="_blank"><img
+                              src="images/collabs/University of Newcastle (Australia).jpg"></a>
+                  <a href="https://www.nulawlab.org/" target="_blank"><img loading="lazy"
+                              src="images/collabs/nu-law.png"></a>
 
 
-                  <a href="https://taltech.ee/en/department-law" target="_blank"><img
+                  <a href="https://taltech.ee/en/department-law" target="_blank"><img loading="lazy"
                               src="images/collabs/TalTech.png"></a>
-                  <a href="https://taltech.ee/en/department-law" target="_blank"><img
+                  <a href="https://taltech.ee/en/department-law" target="_blank"><img loading="lazy"
                               src="images/collabs/lancaster-logo-2.PNG"></a>
-                  <a href="https://suffolklitlab.org/" target=" _blank"><img
+                  <a href="https://suffolklitlab.org/" target=" _blank"><img loading="lazy"
                               src="images/collabs/Suffolk University Law School Legal Tech Lab.png"></a>
 
-                  <a href="https://www.utu.fi/en" target="_blank"><img src="images/collabs/UTU_logo_EN_RGB.png"></a>
+                  <a href="https://www.utu.fi/en" target="_blank"><img loading="lazy"
+                              src="images/collabs/UTU_logo_EN_RGB.png"></a>
 
-                  <a href="https://www.aalto.fi/en" target=" _blank"><img src="images/collabs/Aalto uni logo.png"></a>
+                  <a href="https://www.aalto.fi/en" target=" _blank"><img loading="lazy"
+                              src="images/collabs/Aalto uni logo.png"></a>
                   <a href="https://www.nulawlab.org/projects/the-east-boston-spatial-justice-lab" target=" _blank"><img
-                              src="images/collabs/East Boston Spatial Justice Lab.jpeg"></a>
+                              loading="lazy" src="images/collabs/East Boston Spatial Justice Lab.jpeg"></a>
 
-                  <a href="legaldesignsummit.com" target=" _blank"><img src="images/collabs/TiLD Logo ORIGINAL.png"></a>
-                  <a href="legaldesignsummit.com" target=" _blank"><img src="images/collabs/LawInova_1.png"></a>
-                  <a href="legaldesignsummit.com" target=" _blank"><img
+                  <a href="legaldesignsummit.com" target=" _blank"><img loading="lazy"
+                              src="images/collabs/TiLD Logo ORIGINAL.png"></a>
+                  <a href="legaldesignsummit.com" target=" _blank"><img loading="lazy"
+                              src="images/collabs/LawInova_1.png"></a>
+                  <a href="legaldesignsummit.com" target=" _blank"><img loading="lazy"
                               src="images/collabs/Constitutional Design Lab1 (Christian Djeffal).png"></a>
-                  <a href="legaldesignsummit.com" target=" _blank"><img src="images/collabs/Digital Law Lab.png"></a>
-                  <a href="legaldesignsummit.com" target=" _blank"><img
+                  <a href="legaldesignsummit.com" target=" _blank"><img loading="lazy"
+                              src="images/collabs/Digital Law Lab.png"></a>
+                  <a href="legaldesignsummit.com" target=" _blank"><img loading="lazy"
                               src="images/collabs/BC Access to Justice Center for Excellence (BC ACE).png"></a>
-                  <a href="legaldesignsummit.com" target=" _blank"><img src="images/collabs/Attorney-at-Code.png"></a>
-                  <a href="legaldesignsummit.com" target=" _blank"><img
+                  <a href="https://www.justiceadda.com/" target=" _blank"><img loading="lazy"
+                              src="images/collabs/justiceAddaLogo (2).png"></a>
+                  <a href="legaldesignsummit.com" target=" _blank"><img loading="lazy"
+                              src="images/collabs/Attorney-at-Code.png"></a>
+                  <a href="legaldesignsummit.com" target=" _blank"><img loading="lazy"
                               src="images/collabs/Liquid Legal Institute .png"></a>
-                  <a href="legaldesignsummit.com" target=" _blank"><img
+                  <a href="legaldesignsummit.com" target=" _blank"><img loading="lazy"
                               src="images/collabs/Lebanese American University.jpg"></a>
 
-                  <a href="legaldesignsummit.com" target=" _blank"><img
+                  <a href="legaldesignsummit.com" target=" _blank"><img loading="lazy"
                               src="images/collabs/Gabne Gabnys Law Firm (Jovita Morta Gabne).png"></a>
-                  <a href="legaldesignsummit.com" target=" _blank"><img
+                  <a href="legaldesignsummit.com" target=" _blank"><img loading="lazy"
                               src="images/collabs/iO_Justice_Logo(LauraMarquez).png"></a>
-                  <a href="https://www.linkedin.com/in/nokkonen/" target=" _blank"><img
+                  <a href="https://www.linkedin.com/in/nokkonen/" target=" _blank"><img loading="lazy"
                               src="images/collabs/kolmas persoona logo (Outi Nokkonen).svg"></a>
 
 
-                  <a href="https://www.jku.at/en/schools/" target=" _blank"><img
+                  <a href="https://www.jku.at/en/schools/" target=" _blank"><img loading="lazy"
                               src="images/collabs/JKU_School_LIFT_C_en_schwarz_hoch_cmyk.jpg"></a>
 
                   <a href="https://me.stanford.edu/" target="_blank">
-                        <img src="images/collabs/Stanford Mechanical Engineeering Logo.png" alt="Stanford"
-                              class="large-logo" />
+                        <img loading="lazy" src="images/collabs/Stanford Mechanical Engineeering Logo.png"
+                              alt="Stanford" class="large-logo" />
                   </a>
 
                   <a href="https://www.nu.edu/college/school-of-arts-letters-and-sciences/" target="_blank">
-                        <img src="images/collabs/NU College of Art and Design. JPG" alt="NU College"
+                        <img loading="lazy" src="images/collabs/NU College of Art and Design. JPG" alt="NU College"
                               class="large-logo" />
                   </a>
 
 
-                  <a href="https://www.laurea.fi/en/" target=" _blank"><img
+                  <a href="https://www.laurea.fi/en/" target=" _blank"><img loading="lazy"
                               src="images/collabs/laurea-pystylogo_rgb.png"></a>
 
                   <a href="https://legaldesignsummit.com" target="_blank">
-                        <img src="images/collabs/d-Van updated logo.png" alt="RTK" class="large-logo" />
+                        <img loading="lazy" src="images/collabs/d-Van updated logo.png" alt="RTK" class="large-logo" />
                   </a>
                   <a href="https://legaldesignsummit.com" target="_blank">
-                        <img src="images/collabs/Legal-D(DorraHarrar)UPDATED.png" alt="Dorra Harrar"
+                        <img loading="lazy" src="images/collabs/Legal-D(DorraHarrar)UPDATED.png" alt="Dorra Harrar"
                               class="large-logo" />
                   </a>
                   <a href="https://legaldesignsummit.com" target="_blank">
-                        <img src="images/collabs/RTK logo (Peegi Kaibald).png" alt="RTK" class="large-logo" />
+                        <img loading="lazy" src="images/collabs/RTK logo (Peegi Kaibald).png" alt="RTK"
+                              class="large-logo" />
+                  </a>
+                  <a href="https://legaldesignsummit.com" target="_blank">
+                        <img loading="lazy" src="images/collabs/Jaramillo Villamizar SAS (1).jpg" alt="RTK"
+                              class="large-logo" />
+                  </a>
+                  <a href="https://legaldesignsummit.com" target="_blank">
+                        <img loading="lazy" src="images/collabs/EdgertonRiley-full(Peter Hornsby).png" alt="RTK"
+                              class="large-logo" />
+                  </a>
+                  <a href="https://www.aho.no/english/" target="_blank">
+                        <img loading="lazy" src="images/collabs/Oslo School of Architecture & Design.png" alt="OSAD"
+                              class="large-logo" />
                   </a>
 
-                  <a href="https://www.linkedin.com/in/olive-mumbo-72ba2059/" target="_blank">
-                        <img src="images/collabs/OliveHarbor Global Solutions.png" alt="Olive Harbor"
+                  </a>
+                  <a href="#" target="_blank">
+                        <img loading="lazy" src="images/collabs/Public Legal Design.PNG" alt="blank"
                               class="large-logo" />
                   </a>
+                  <a href="#" target="_blank">
+                        <img loading="lazy" src="images/collabs/Legal-Design-Sandbox-logo-200x66.png" alt="blank"
+                              class="large-logo" />
+                  </a>
+
                   <a href="https://www.lawtoons.in/" target="_blank">
-                        <img src="images/collabs/Lawtoons.jpg" alt="Lawtoons" class="large-logo" />
+                        <img loading="lazy" src="images/collabs/Lawtoons.jpg" alt="Lawtoons" class="large-logo" />
                   </a>
                   <a href="https://www.domstol.se/domstolsverket/other-languages/english/" target="_blank"><img
-                              src="images/collabs/Domstolsverket.png"></a>
+                              loading="lazy" src="images/collabs/Domstolsverket.png"></a>
                   <a href="https://lawyersdesignschool.com/" target="_blank">
-                        <img src="images/collabs/lawyer_design_school.png" alt="Lawyers Design School"
+                        <img loading="lazy" src="images/collabs/lawyer_design_school.png" alt="Lawyers Design School"
                               class="large-logo" />
                   </a>
 
                   <a href="https://ddw.nl/en/locations/716/foundation-we-are" target="_blank">
-                        <img src="images/collabs/FoundationWeAre.png" alt="Foundation we are" class="large-logo" />
+                        <img loading="lazy" src="images/collabs/FoundationWeAre.png" alt="Foundation we are"
+                              class="large-logo" />
                   </a>
                   <a href="https://www.domstol.se/helsingborgs-tingsratt/" target="_blank">
-                        <img src="images/collabs/tr_Helsingborg_logo.png" alt="Helsingborg Court" class="large-logo" />
+                        <img loading="lazy" src="images/collabs/tr_Helsingborg_logo.png" alt="Helsingborg Court"
+                              class="large-logo" />
                   </a>
 
                   <a href="https://www.uni-hamburg.de/en.html" target="_blank">
-                        <img src="images/collabs/university of hamburg-logo-u-2010-u-farbe-u-rgb.jpg"
+                        <img loading="lazy" src="images/collabs/university of hamburg-logo-u-2010-u-farbe-u-rgb.jpg"
                               alt="University of Hamburg" class="large-logo" />
                   </a>
 
