--- a/index.html
+++ b/index.html
@@ -915,6 +915,8 @@
 					src="images/collabs/Digital Law Lab.png"></a>
 			<a href="legaldesignsummit.com" target=" _blank"><img loading="lazy"
 					src="images/collabs/BC Access to Justice Center for Excellence (BC ACE).png"></a>
+			<a href="https://www.justiceadda.com/" target=" _blank"><img loading="lazy"
+					src="images/collabs/justiceAddaLogo (2).png"></a>
 			<a href="legaldesignsummit.com" target=" _blank"><img loading="lazy"
 					src="images/collabs/Attorney-at-Code.png"></a>
 			<a href="legaldesignsummit.com" target=" _blank"><img loading="lazy"
@@ -972,7 +974,10 @@
 
 			</a>
 			<a href="#" target="_blank">
-				<img loading="lazy" src="images/collabs/Public Legal Design.PNG" alt="Olive Harbor"
+				<img loading="lazy" src="images/collabs/Public Legal Design.PNG" alt="blank" class="large-logo" />
+			</a>
+			<a href="#" target="_blank">
+				<img loading="lazy" src="images/collabs/Legal-Design-Sandbox-logo-200x66.png" alt="blank"
 					class="large-logo" />
 			</a>
 
