BF facilitator correction

--- a/brainfactory.html
+++ b/brainfactory.html
@@ -738,7 +738,7 @@
                   </p>
                   <p><strong>Facilitators:</strong></p>
                   <ul>
-                    <li>Mayowa Odusote & team, DLA Piper</li>
+                    <li>Riyal Patel & team, DLA Piper</li>
                     <li>Maged Helmy, Newcode.ai</li>
 
                   </ul>
