--- a/footer.html
+++ b/footer.html
@@ -123,6 +123,7 @@
 
             <img src="images/collabs/Alma Insights__black.png" alt="Alma Insights"
                   style="height: 50px; object-fit: contain;">
+            <img src="images/collabs/ilves logo.png" alt="Ilves" style="height: 50px; object-fit: contain;">
       </div>
       <div class="logo-section">
             <h3>In co-operation with:</h3>
