--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 		}
 
 		.sponsor-row.secondary {
-			grid-template-columns: repeat(2, auto);
+			grid-template-columns: repeat(3, auto);
 			margin-top: 22px;
 		}
 
@@ -801,6 +801,9 @@
 			<a href="https://www.almainsights.fi/" target="_blank">
 				<img loading="lazy" src="images/collabs/Alma Insights__black.png" alt="Alma Insights"
 					style="height: 70px;">
+			</a>
+			<a href="https://www.ilvessolutions.fi/en/" target="_blank">
+				<img loading="lazy" src="images/collabs/ilves logo.png" alt="Ilves Solutions" style="height: 70px;">
 			</a>
 		</div>
 	</section>
