--- a/the-gallery.html
+++ b/the-gallery.html
@@ -1597,28 +1597,77 @@
                             </div>
                         </div>
                     </article>
-                    <article class="exhibition-card">
-                        <div class="exhibition-image"><img src="images/collabs/OliveHarbor Global Solutions.png"
-                                alt="background"></div>
-                        <div class="exhibition-body">
-                            <h3 class="exhibition-title">Law & Tea: Community Dialogues for Everyday Justice</h3>
-                            <p class="exhibition-meta">Olive Mumbo | OliveHarbor Global Solutions</p>
-                            <p class="exhibition-summary">We are piloting an informal legal dialogue space called Law &
-                                Tea, where community members gather over tea to explore everyday legal questions through
-                                conversation, storytelling, and simple design tools.</p>
-                        </div>
-                        <div class="exhibition-footer">
-                            <div class="badge-container">
-                                <span class="badge">Tags</span>
-                                <span class="badge badge-year">Year</span>
+                    <article class="exhibition-card" tabindex="0" aria-expanded="false">
+
+                        <div class="card-summary">
+                            <div class="exhibition-image">
+                                <img src="images/gallery/the-gallery-background.png" alt="background">
                             </div>
-                            <div class="exhibition-actions">
-                                <a href="https://www.linkedin.com/in/olive-mumbo-72ba2059/"
-                                    class="social-icon linkedin-icon" aria-label="LinkedIn"></a>
-                                <a href="#" class="social-icon email-icon" aria-label="Email"></a>
+
+                            <div class="exhibition-body">
+                                <h3 class="exhibition-title">Exhibition Name</h3>
+                                <p class="exhibition-meta">Organization</p>
+                                <p class="exhibition-summary">Summary (25 words)</p>
+                            </div>
+
+                            <footer class="exhibition-footer">
+                                <div class="badge-container">
+                                    <span class="badge">#Tags</span>
+                                    <span class="badge badge-year">Year</span>
+                                </div>
+                                <div class="exhibition-actions">
+                                    <a href="#" class="social-icon linkedin-icon" aria-label="LinkedIn"></a>
+
+                                </div>
+                            </footer>
+                        </div>
+
+                        <div class="exhibition-details" hidden aria-hidden="true">
+                            <div class="details-inner">
+                                <div class="details-image">
+
+                                    <img src="images/gallery/the-gallery-background.png" alt="Black & white portrait">
+                                </div>
+
+                                <div class="details-text">
+                                    <h2 class="details-title">The Gallery<br><span>Name of Exhibition</span></h2>
+
+                                    <h3 class="person-name">
+                                        <img src="images/flags/vn.svg" alt="" height="18"> Person
+                                    </h3>
+                                    <p class="person-meta">Position | Organisation</p>
+
+                                    <p class="person-links">
+                                        <a href="#" class="linkedin-icon">LinkedIn</a>
+                                    </p>
+
+                                    <hr>
+
+                                    <h4>About this work</h4>
+                                    <p>
+                                    </p>
+
+
+                                    <h4>Impact</h4>
+                                    <p>
+                                    </p>
+
+                                    <h4>Key learnings</h4>
+                                    <p></p>
+
+                                    <h4>Learn More</h4>
+                                    <p><a href="#">Download
+                                            the material here</a></p>
+                                    <p><a href="#">Read
+                                            the blog</a></p>
+                                    <p><a href="#">Project Site</a></p>
+                                    <p><a href="#">Project
+                                            LinkedIn</a></p>
+                                </div>
                             </div>
                         </div>
                     </article>
+
                     <article class="exhibition-card">
                         <div class="exhibition-image"><img src="images/gallery/the-gallery-background.png"
                                 alt="background"></div>
