update speaker bios

--- a/brainfactory.html
+++ b/brainfactory.html
@@ -643,6 +643,9 @@
                 <ul>
                   <li>Zainab Malik, Senior Policy and Advocacy Advisor - HiiL; </li>
                   <li> Viviana Brun, Programme Manager, Justice Innovation Labs - HiiL</li>
+                  <li> Andrew Solomon, Lead Justice Collaborator - Rule of Law IDEAS Co-lab </li>
+                  <li> Suparat Fern Swatemal, Global Engagement Lead, Thailand Institute of Justice</li>
+
                 </ul>
 
               </div>
