--- a/speakers.html
+++ b/speakers.html
@@ -932,6 +932,30 @@
         ]
       },
       {
+        section: "Designing Access to Justice",
+        name: "Aaron Leakey",
+        position: "Professor",
+
+        image: "images/speakers/2025/Aaron_Leakey.png",
+
+        bio: "Aaron is a research fellow at the BC access to Justice Center for Excellence and instructs in law and dispute resolution at the University of Victoria (UVic). Aaron has a long history in dispute resolution education and practice, including as an instructor (Family Justice) at the Justice Institute of BC. He holds an MA in theology (Regent College) and an MA in Dispute Resolution (UVic), in addition to certifications in mediation from Mediate BC and Family Mediation Canada. Currently, Aaron is completing a PhD at UVic where he studies the intersection of legal design and intimate partner violence.",
+        sessions: [
+          { day: "DAY 2 - Friday", title: "Fireside chat: Designing with, not for: Revisioning Justice as Trauma-Informed and Person-Centered" }
+        ]
+      },
+      {
+        section: "Designing Access to Justice",
+        name: "Emily Oliver",
+        position: "BeyondText Founder",
+
+        image: "images/speakers/2025/emilyoliver_photo.jpeg",
+
+        bio: "Emily continues to develop trauma-informed approaches to legal co-design for systemic change while working with top law firms in the UK and, more recently, Australia. Emily is the Founder of BeyondText, a creative co-production agency for people-powered systems change, not for profit. BeyondText works with collaborators ranging from the legal and education sectors to refugee camps and hospitals, together with partners including the UN, the UK’s National Health Service (NHS), and the Lebanese National Mental Health Programme. Emily’s expertise spans purpose-driven tech, arts, and social innovation, having founded the UK’s largest crowdfunding website.",
+        sessions: [
+          { day: "DAY 2 - Friday", title: "Fireside chat: Designing with, not for: Revisioning Justice as Trauma-Informed and Person-Centered" }
+        ]
+      },
+      {
         section: "Challenging Tradition through Innovation",
         name: "Barbora Obracajova",
         position: "Lawyer, Attorney-at-Code",
