--- a/the-gallery.html
+++ b/the-gallery.html
@@ -36,7 +36,7 @@
         });
     </script>
 
-    <title>Legal Design Summit Speakers</title>
+    <title>Legal Design Summit The Gallery</title>
 
     <!DOCTYPE html>
     <html lang="en">
@@ -731,7 +731,8 @@
                                     <span class="badge badge-year">2025</span>
                                 </div>
                                 <div class="exhibition-actions">
-                                    <a href="#" class="social-icon linkedin-icon" aria-label="LinkedIn"></a>
+                                    <a href="https://www.linkedin.com/in/olive-mumbo-72ba2059/"
+                                        class="social-icon linkedin-icon" aria-label="LinkedIn"></a>
 
                                 </div>
                             </footer>
@@ -1196,7 +1197,7 @@
 
                         <div class="card-summary">
                             <div class="exhibition-image">
-                                <img src="images/collabs/HiiL_Logo color tagline.png" alt="background">
+                                <img src="images/gallery/the-gallery-background.png" alt="background">
                             </div>
 
                             <div class="exhibition-body">
@@ -1216,7 +1217,8 @@
                                     <span class="badge badge-year">2025</span>
                                 </div>
                                 <div class="exhibition-actions">
-                                    <a href="#" class="social-icon linkedin-icon" aria-label="LinkedIn"></a>
+                                    <a href="https://www.linkedin.com/in/zainabzmalik/"
+                                        class="social-icon linkedin-icon" aria-label="LinkedIn"></a>
 
                                 </div>
                             </footer>
@@ -1594,8 +1596,6 @@
                                     </p>
 
                                     <hr>
-
-                                    <!-- ────── ABOUT THIS WORK ────── -->
                                     <h4>About this work</h4>
                                     <p>
                                         My work is a strategic and service-oriented framework titled <strong>Regulatory
@@ -1910,11 +1910,11 @@
                                         special thanks to LIT Robopsychology Lab and VAME.
                                     </p>
 
-                                </div> <!-- /.details-text -->
-                            </div> <!-- /.details-inner -->
-                        </div> <!-- /.exhibition-details -->
+                                </div>
+                            </div>
+                        </div>
                     </article>
-
+                    <!-- ────── card-template 
                     <article class="exhibition-card" tabindex="0" aria-expanded="false">
 
                         <div class="card-summary">
@@ -2024,6 +2024,7 @@
                             </div>
                         </div>
                     </article>
+                    ────── -->
 
                 </section>
             </main>
