--- a/the-gallery.html
+++ b/the-gallery.html
@@ -342,6 +342,15 @@
             grid-column: auto;
         }
 
+        .sidebar-list a.active {
+            background: rgba(174, 236, 233, 0.3);
+            font-weight: 600;
+        }
+
+        .exhibition-card.hidden {
+            display: none !important;
+        }
+
         @media (max-width: 768px) {
             .main-title {
                 font-size: 2.5rem;
@@ -523,7 +532,7 @@
                                     <li><a href="about-us.html">Meet the Team</a></li>
                                     <li><a href="values.html">Values</a></li>
                                     <li><a href="blog.html">Blog</a></li>
-
+                                    <li><a href="the-gallery.html">The Gallery</a></li>
                                     <li class="more hidden">
                                         <button type="button" aria-haspopup="true" aria-expanded="false">More</button>
                                         <ul class="submenu"></ul>
@@ -547,14 +556,19 @@
             <aside class="gallery-sidebar" aria-labelledby="sidebar-heading">
                 <h2 id="sidebar-heading" class="sidebar-title">Contents</h2>
                 <ul class="sidebar-list">
-                    <li><a href="#">Legal artificial intelligence</a></li>
-                    <li><a href="#">Sustainability</a></li>
-                    <li><a href="#">Access to justice</a></li>
+                    <li><a href="#" data-filter="all" class="filter-link active">Show All</a></li>
+                    <li><a href="#" data-filter="artificial intelligence" class="filter-link">Artificial
+                            intelligence</a></li>
+                    <li><a href="#" data-filter="sustainability" class="filter-link">Sustainability</a></li>
+                    <li><a href="#" data-filter="access to justice" class="filter-link">Access to justice</a></li>
+                    <li><a href="#" data-filter="accessibility" class="filter-link">Accessibility</a></li>
+                    <li><a href="#" data-filter="community" class="filter-link">Community</a></li>
+                    <li><a href="#" data-filter="content design" class="filter-link">Content design</a></li>
                 </ul>
             </aside>
 
             <main class="gallery-main">
-                <h2 class="gallery-collective">The "Name" Collective</h2>
+
 
                 <section class="exhibitions-grid" aria-label="Exhibitions list">
 
@@ -2057,8 +2071,90 @@
             });
 
         });
-    </script>
+        // Filter functionality
+        $(function () {
+            $('.filter-link').on('click', function (e) {
+                e.preventDefault();
 
+                const filterValue = $(this).data('filter');
+
+                // Update active state
+                $('.filter-link').removeClass('active');
+                $(this).addClass('active');
+
+                // Filter cards
+                if (filterValue === 'all') {
+                    $('.exhibition-card').removeClass('hidden');
+                } else {
+                    $('.exhibition-card').each(function () {
+                        const $card = $(this);
+                        const badges = $card.find('.badge:not(.badge-year)').map(function () {
+                            return $(this).text().toLowerCase().replace('#', '');
+                        }).get();
+
+                        const hasTag = badges.some(badge => badge.includes(filterValue));
+                        $card.toggleClass('hidden', !hasTag);
+
+                        // Close expanded card if it's being hidden
+                        if (!hasTag && $card.hasClass('open')) {
+                            $card.removeClass('open')
+                                .attr('aria-expanded', 'false')
+                                .find('.exhibition-details')
+                                .slideUp(250)
+                                .attr('aria-hidden', 'true');
+                        }
+                    });
+                }
+            });
+        });
+    </script>
+    <script>
+        (() => {
+            const MAX_VISIBLE = 4;
+            const nav = document.getElementById('ldsNav');
+            const moreLi = nav.querySelector('.more');
+            const moreBtn = moreLi.querySelector('button');
+            const subMenu = moreLi.querySelector('.submenu');
+
+            function redistribute() {
+
+                while (subMenu.firstChild) {
+                    nav.insertBefore(subMenu.firstChild, moreLi);
+                }
+                moreLi.classList.add('hidden');
+
+
+                if (window.innerWidth <= 640) return;
+
+
+                const available = nav.parentElement.getBoundingClientRect().width;
+                let used = moreLi.offsetWidth;
+                let shown = 0;
+
+                [...nav.children].forEach(li => {
+                    if (li === moreLi) return;
+
+                    const fits = used + li.offsetWidth <= available;
+                    const underCap = shown < MAX_VISIBLE;
+
+                    if (fits && underCap) {
+                        used += li.offsetWidth;
+                        shown += 1;
+                    } else {
+                        subMenu.appendChild(li);
+                        moreLi.classList.remove('hidden');
+                    }
+                });
+            }
+            moreBtn.addEventListener('click', () => {
+                const isOpen = moreLi.classList.toggle('open');
+                moreBtn.setAttribute('aria-expanded', isOpen);
+            });
+
+            window.addEventListener('load', redistribute);
+            window.addEventListener('resize', redistribute);
+        })();
+    </script>
 
 </body>
 <div id="footer"></div>
