Gallery update colors

--- a/the-gallery.html
+++ b/the-gallery.html
@@ -50,8 +50,14 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
             background-color: #ffffff;
+            background-image: url('images/gallery/beta-background.png');
+
+            background-repeat: repeat;
+
+            background-size: 600px;
             color: #333;
             line-height: 1.6;
+
         }
 
         .container {
@@ -262,13 +268,13 @@
             display: inline-block;
             padding: 0.15rem 0.55rem;
             font: 600 0.75rem/1.35 'Oswald', sans-serif;
-            background: #AEECE9;
+            background: #FECAEA;
             border-radius: 4px;
             color: #000;
         }
 
         .badge-year {
-            background: #e0f7f6;
+            background: #F8A8EA;
         }
 
         .exhibition-actions {
@@ -532,7 +538,7 @@
                                     <li><a href="about-us.html">Meet the Team</a></li>
                                     <li><a href="values.html">Values</a></li>
                                     <li><a href="blog.html">Blog</a></li>
-                                    <li><a href="the-gallery.html">The Gallery</a></li>
+                                    <li><a href="the-gallery.html">[Beta] The Gallery</a></li>
                                     <li class="more hidden">
                                         <button type="button" aria-haspopup="true" aria-expanded="false">More</button>
                                         <ul class="submenu"></ul>
@@ -547,7 +553,7 @@
     </div>
     <div class="container">
         <header class="header">
-            <h1 class="main-title">The Gallery</h1>
+            <h1 class="main-title">[Beta] The Gallery</h1>
             <p class="subtitle">An Exhibition of Legal Design in Action</p>
             <p class="subtitle">A space to explore and celebrate legal design work from around the world featuring case
                 studies and practical examples contributed by practicipants and partners</p>
@@ -732,7 +738,7 @@
 
                             <div class="exhibition-body">
                                 <h3 class="exhibition-title">Law & Tea: Community Dialogues for Everyday Justice</h3>
-                                <p class="exhibition-meta">Olive Mumbo OliveHarbor Global Solutions </p>
+                                <p class="exhibition-meta">Olive Mumbo OliveHarbor / Global Solutions </p>
                                 <p class="exhibition-summary">We are piloting an informal legal dialogue space called
                                     Law & Tea, where community members gather over tea to explore everyday legal
                                     questions through conversation, storytelling, and simple design tools.</p>
@@ -1217,7 +1223,7 @@
                             <div class="exhibition-body">
                                 <h3 class="exhibition-title">Scaling people-centered justice: A Justice Innovation Lab
                                     Approach</h3>
-                                <p class="exhibition-meta">HiiL: User-friendly Justice</p>
+                                <p class="exhibition-meta">Zanaib Malik / HiiL: User-friendly Justice</p>
                                 <p class="exhibition-summary">HiiL’s Justice Innovation Lab is an evidence-based,
                                     design-thinking process that brings together diverse communities and stakeholders to
                                     co-create innovative, scalable, and sustainable solutions for improving access to
@@ -1561,7 +1567,7 @@
                             <div class="exhibition-body">
                                 <h3 class="exhibition-title">RCaaS: Redesigning Compliance to Serve People, Not Just
                                     Systems</h3>
-                                <p class="exhibition-meta">Savannah Consulting</p>
+                                <p class="exhibition-meta">Caroline Muchina / Savannah Consulting</p>
 
                                 <p class="exhibition-summary">
                                     I help institutions, including those in the public sector, use legal design and
