--- a/volunteer.html
+++ b/volunteer.html
@@ -82,7 +82,7 @@
 									<li class=""><a href="about-us.html">Meet the team</a></li>
 									<li class=""><a href="tickets.html">Tickets</a></li>
 									<li class=" last"><a href="why-attend.html">History</a></li>
-									<li><a href="the-gallery.html">The Gallery</a></li>
+									<li><a href="the-gallery.html">[Beta] The Gallery</a></li>
 								</ul>
 							</div>
 
