--- a/tickets.html
+++ b/tickets.html
@@ -198,7 +198,7 @@
                   <li><a href="about-us.html">Meet the Team</a></li>
                   <li><a href="values.html">Values</a></li>
                   <li><a href="blog.html">Blog</a></li>
-
+                  <li><a href="the-gallery.html">[Beta] The Gallery</a></li>
                   <li class="more hidden">
                     <button type="button" aria-haspopup="true" aria-expanded="false">More</button>
                     <ul class="submenu"></ul>
