fixed linkedin url

--- a/the-gallery.html
+++ b/the-gallery.html
@@ -599,7 +599,7 @@
                                     <span class="badge badge-year">2025</span>
                                 </div>
                                   <div class="exhibition-actions">
-                                    <a href="www.linkedin.com/in/aneta-baranowska-out-law/""
+                                    <a href="https://www.linkedin.com/in/aneta-baranowska-out-law/"
                                         class="social-icon linkedin-icon" aria-label="LinkedIn"></a>
 
                                 </div>
@@ -622,7 +622,7 @@
                                 
 
                                     <p class="person-links">
-                                        <a href="www.linkedin.com/in/aneta-baranowska-out-law"
+                                        <a href="https://www.linkedin.com/in/aneta-baranowska-out-law/"
                                             class="linkedin-icon">LinkedIn</a>
                                     </p>
 
